# rknn-rs

./: CHANGELOG.md  Cargo.toml  Readme.md  build.rs  rknn_matmul_api.h
.github/workflows/: rust.yml
rknn-rs/: Cargo.toml
rknn-rs/src/: error.rs  lib.rs
rknn-sys-rs/: Cargo.toml  build.rs  rknn_api.h  wrapper.h
src/: lib.rs
