[package]
name = "rknn-rs"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "rknn rust binding"
repository = "https://github.com/darkautism/rknn-rs"

[dependencies]
bytemuck = "1.23.2"
rknn-sys-rs = { version = "0.1.2", path = "../rknn-sys-rs" }

[features]
rknnmrt = ["rknn-sys-rs/rknnmrt"]
